--- a/MountainTrailsSystem.Infrastructure/MountainTrailsSystem.Infrastructure.csproj
+++ b/MountainTrailsSystem.Infrastructure/MountainTrailsSystem.Infrastructure.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\**" />
+    <EmbeddedResource Remove="Data\Migrations\**" />
+    <None Remove="Data\Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.28" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.28" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Migrations\" />
+    <Folder Include="Constants\" />
+    <Folder Include="Enumerations\" />
   </ItemGroup>
 
 </Project>
