--- a/MountainTrailsSystem/Properties/launchSettings.json
+++ b/MountainTrailsSystem/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,13 +10,23 @@
   "profiles": {
     "MountainTrailsSystem": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7135;http://localhost:5135",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7135;http://localhost:5135",
+      "dotnetRunMessages": true
     },
+    "MountainTrailsSystemProduction": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:7135;http://localhost:5135",
+      "dotnetRunMessages": true
+    },
+
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
