--- a/MountainTrailsSystem/MountainTrailsSystem.csproj
+++ b/MountainTrailsSystem/MountainTrailsSystem.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
